# text-frequency-analyzer

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic_migrations/: env.py
alembic_migrations/versions/: 2026_03_20_1725-200fb7859c21_init.py  2026_03_22_0124-6730708a018f_add_reports_table.py
app/: main.py
app/api/: report.py
app/core/: base_dao.py  config.py  database.py  logging_config.py
app/report/: analyzer.py  dao.py  enums.py  excel_writer.py  models.py  schemas.py  service.py  utils.py
